Added sound for buying
Added store
Added grab feature for settings

Fixed the blue background for mobile
Fixed cookie cursor