@@ -1,5 +1,6 @@
 Added sound for buying
 Added store
+Added new cheat "themehack"
 Added grab feature for settings
 
 Fixed the blue background for mobile
